--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    background-image: url("Background.jpg");
+    background-color: thistle;
+}
+
 footer {
     background-color: #3e403e;
     border-top: solid teal 6px;
