--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
+/* add space between header and the body */
+
+nav {
+    margin-bottom: 50px;
+}
+
+/*Style all background styles not styled by bootstrap*/
+
 body {
     background-image: url("Background.jpg");
     background-color: thistle;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h1 {
+    color: teal;
+}
+
+/* bottom margin to make sure sticky footer does not cover content */
+
+main {
+    background-color: #f8f9fa;
+    margin-bottom: 80px;
 }
 
 footer {
