--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ nav {
 /*Style all background styles not styled by bootstrap*/
 
 body {
-    background-image: url("/assets/Background.jpg");
+    background-image: url("assets/Background.jpg");
     background-color: thistle;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -21,8 +21,12 @@ h1 {
 /* bottom margin to make sure sticky footer does not cover content */
 
 main {
-    background-color: #f8f9fa;
     margin-bottom: 80px;
+    padding: 20px;
+}
+
+.background {
+    background-color: #f8f9fa;
     padding: 20px;
 }
 
