--- a/assets/style.css
+++ b/assets/style.css
@@ -7,9 +7,9 @@ nav {
 /*Style all background styles not styled by bootstrap*/
 
 body {
-    background-image: url("assets/Background.jpg");
+    background-image: url("background.jpg");
     background-color: thistle;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
