--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,8 @@
 
 nav {
     margin-bottom: 50px;
+    background-color: #3e403e;
+    color: white;
 }
 
 /*Style all background styles not styled by bootstrap*/
@@ -51,5 +53,7 @@ img {
 
 footer {
     background-color: #3e403e;
+    color: white;
+    font-size: smaller;
     border-top: solid teal 6px;
 }
