added more content to portfolio page in cards

--- a/assets/style.css
+++ b/assets/style.css
@@ -32,16 +32,8 @@ main {
     padding: 20px;
 }
 
-/* give space around all images so I don't need margin classes on each element  */
-
-img {
-    margin: 10px;
-}
-
-/* align left margin with images  */
-
-.figure-caption {
-    margin-left: 10px;
+.portfolio .card-body {
+    padding: 10px;
 }
 
 /* portrait images set to take up half of their column width  */
