create resume page instead of contact

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,11 @@ main {
     padding: 20px;
 }
 
+.resume-heading {
+    text-align: center;
+    font-weight: bold;
+}
+
 .background {
     background-color: #f1f2f3;
     padding: 20px;
